--- a/deck.mdx
+++ b/deck.mdx
@@ -1,9 +1,9 @@
 import { CodeSurfer } from "mdx-deck-code-surfer";
-import { Notes } from "mdx-deck";
+import { Appear, Head } from "mdx-deck";
+import { Split } from "mdx-deck/layouts";
+
 export { default as theme } from "./theme";
 import { codeTheme } from "./theme";
-
-import oceanicNext from "prism-react-renderer/themes/oceanicNext";
 
 import App from "../example-js/src/SimpleExample/App";
 
@@ -16,7 +16,105 @@ import App from "../example-js/src/SimpleExample/App";
 ### @p1xelHer0
 
 ```notes
+twitter, github, osv
+```
 
+---
+
+## Vem är jag?
+
+<br />
+
+<Appear>
+  <div>JavaScript/AngularJS</div>
+  <div>ES6/React/Redux</div>
+  <div>Haskell *</div>
+  <div>OCaml/ReasonML *</div>
+  <div>TypeScript</div>
+</Appear>
+
+```notes
+Första jobb
+Andra jobb
+Redux -> FP + Typer
+Galen i funktionella typade språk
+* Ej jobb, endast fritid
+Nytt uppdrag, nytt språk, TypeScript
+```
+
+---
+
+## Dynamiskt -> Statiskt
+
+### Typer
+
+```notes
+Min resa
+Vi ska prata om typer, i form av TypeScript
+```
+
+---
+
+## Varför typer?
+
+```notes
+målet är "aah, därför!"
+```
+
+---
+
+## Typer => Säkerhet
+
+### "Typsäker"
+
+```notes
+Vad menar jag?
+"Låt datorn hålla koll"
+```
+
+---
+
+## "Säkerhet"
+
+<Appear>
+  <div>Refaktorering</div>
+  <div>"Dokumentation"</div>
+  <div>"Make illegal states unrepresentable"</div>
+</Appear>
+
+```notes
+Agila team, iterativt med krav som ändras
+Typer kan bestämma logik
+Miljöer bortom kod kan ha problem, testning och blabla
+```
+
+---
+
+## Hur?
+
+### TypeScript
+
+```notes
+Det är ju detta seminariet handlar om!
+```
+
+---
+
+_TypeScript is a typed superset of JavaScript that compiles to plain JavaScript._
+
+##### - typescriptlang.org
+
+```notes
+Allt som är JavaScript kan också kompileras av TypeScript.
+Värdefullt i editor-tooling, utan compiler i kodbas!
+```
+
+---
+
+... is a **_typed_** superset ...
+
+```notes
+Var är en typ?
 ```
 
 ---
@@ -24,17 +122,79 @@ import App from "../example-js/src/SimpleExample/App";
 <CodeSurfer
   title="JavaScript"
   code={require("!raw-loader!./assets/Functions.js")}
-  lang="javascript"
+  dark={true}
+  lang="typescript"
   theme={codeTheme}
   showNumbers={false}
-  dark={true}
   steps={[
-    {},
-    { range: [1, 1 + 2], notes: "function keyword" },
-    { lines: [5], notes: "arrow function" },
+    { range: [1, 1 + 2], notes: "" },
+    { lines: [5], notes: "" },
     { range: [7, 7 + 2], notes: "" },
     { lines: [11], notes: "" },
     { lines: [13], notes: "" },
+    {},
+  ]}
+/>
+
+```notes
+JavaScript
+```
+
+---
+
+<CodeSurfer
+  title="TypeScript"
+  code={require("!raw-loader!./assets/FunctionsTSCompiler.ts")}
+  dark={true}
+  lang="typescript"
+  theme={codeTheme}
+  showNumbers={false}
+  steps={[
+    { range: [1, 1 + 2], notes: "" },
+    { lines: [5], notes: "" },
+    { range: [7, 7 + 2], notes: "" },
+    { lines: [11], notes: "" },
+    { range: [13, 15], notes: "" },
+    {},
+  ]}
+/>
+
+```notes
+TypeScript!
+"Type inference"
+word, ej typ ännu, "!" är dock det
+olika varianter av plus
+```
+
+---
+
+<CodeSurfer
+  title="Annoteringar"
+  code={require("!raw-loader!./assets/Functions.ts")}
+  dark={true}
+  lang="typescript"
+  theme={codeTheme}
+  showNumbers={false}
+  steps={[
+    { range: [1, 1 + 2], notes: "" },
+    { tokens: { 1: [3, 4, 5, 6, 7, 8] }, notes: "string" },
+    { tokens: { 1: [9, 10, 11, 12] }, notes: "void" },
+    {
+      tokens: { 1: [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12] },
+      notes: "(name: string) => void",
+    },
+    { tokens: { 5: [4, 5, 6, 7, 8, 9, 10, 11, 12, 13] }, notes: "" },
+    {
+      tokens: { 5: [4, 5, 6, 7, 8, 9, 10, 11, 12, 13] },
+      notes: "(word: string) => string",
+    },
+    { tokens: { 7: [4, 5, 6, 7, 8, 9, 10, 11, 12, 13] }, notes: "" },
+    {
+      tokens: { 7: [4, 5, 6, 7, 8, 9, 10, 11, 12, 13] },
+      notes: "(name: string) => void",
+    },
+    { lines: [11], notes: "" },
+    { range: [13, 13 + 2], notes: "" },
     {},
   ]}
 />
@@ -48,78 +208,106 @@ import App from "../example-js/src/SimpleExample/App";
 <CodeSurfer
   title="Typer"
   code={require("!raw-loader!./assets/BasicTypes.ts")}
+  dark={true}
   lang="typescript"
   theme={codeTheme}
-  dark={true}
-  steps={[
-    {}, 
-    { range: [1, 1+1], notes: ""},
-    { range: [4, 4+4], notes: ""},
-    { range: [10, 10+5], notes: ""},
-    { range: [17, 17+2], notes: ""},
-    { range: [21, 21+3], notes: ""},
-    {}
-  ]}
-/>
----
-
-<CodeSurfer
-  title="Ett simpelt exempel"
-  code={require("!raw-loader!./assets/SimpleExample.jsx")}
-  lang="javascript"
-  theme={codeTheme}
   showNumbers={false}
-  dark={true}
   steps={[
-    {},
-    { range: [2, 5], notes: "State" },
-    { range: [7, 12], notes: "🌀 ➞ 📦 ➞ 📊" },
-    { range: [14, 24], notes: "🌀 + 📊" },
+    { range: [1, 1 + 1], notes: "" },
+    { range: [4, 4 + 1], notes: "" },
+    { range: [7, 7 + 1], notes: "" },
+    { range: [10, 10 + 2], notes: "" },
+    { range: [13, 13 + 2], notes: "" },
     {},
   ]}
 />
 
 ```notes
-
+Boolean
+Number
+String
+Array, endast en typ T, variabel längd
+Tuple, nytt! Flera typer, fix längd
 ```
 
 ---
 
 <CodeSurfer
-  title="TypeScript"
-  code={require("!raw-loader!./assets/Functions.ts")}
+  title="Polymorphism"
+  code={require("!raw-loader!./assets/Polymorphism.ts")}
+  dark={true}
   lang="typescript"
   theme={codeTheme}
   showNumbers={false}
-  dark={true}
   steps={[
+    { range: [1, 1 + 1], notes: "" },
+    { range: [3, 3 + 3], notes: "" },
+    { lines: [8], notes: "" },
+    { lines: [10], notes: "" },
+    { lines: [11], notes: "" },
+    { range: [10, 11], notes: "" },
     {},
-    { range: [1, 1 + 2], notes: "" },
-    { lines: [5], notes: "" },
-    { range: [7, 7 + 2], notes: "" },
-    { tokens: { 1: [5, 6, 7, 8] } },
-    { tokens: { 1: [9, 10, 11, 12] } },
-    { tokens: { 1: [4, 5, 6, 7, 8, 9, 10, 11, 12] } },
-    { tokens: { 5: [4, 5, 6, 7, 8, 9, 10, 11, 12, 13] } },
-    { tokens: { 7: [4, 5, 6, 7, 8, 9, 10, 11, 12, 13] } },
-    { lines: [11], noted: "" },
-    { range: [13, 13 + 2], noted: "" },
   ]}
 />
 
 ```notes
-
+Varör är dom spännande?
+En typ som tar en typ som parameter
+Funktion -> Typ
 ```
 
 ---
 
-- Om vi laddar data, visa spinner
-- Om vi har data, visa data
+<CodeSurfer
+  title="Interfaces"
+  code={require("!raw-loader!./assets/Interfaces.ts")}
+  dark={true}
+  lang="typescript"
+  theme={codeTheme}
+  showNumbers={false}
+  steps={[
+    { range: [1, 1 + 4], notes: "" },
+    { range: [7, 7 + 7], notes: "" },
+    {},
+  ]}
+/>
 
 ```notes
-
+Varör är dom spännande?
+En typ som tar en typ som parameter
+Funktion -> Typ
 ```
 
 ---
+
+## Recap
+
+<Appear>
+  <div>Typer</div>
+  <div>Polymorphism</div>
+  <div>Interfaces</div>
+  <div>Egna typer</div>
+</Appear>
+
+```notes
+Typer
+Polymorphism, typer som tar typer som parameter
+Typer bestående av andra typer
+Definiera egna typer, type keyword
+```
+
+---
+
+# 🤙 ➞ 🌀 ➞ 📦 ➞ 📊
+
+```notes
+Tjena resurs, ge mig data
+Visa spinner
+Få tillbaka paketet, data
+Visa data
+```
+
+---
+
 
 # Tack för att ni lyssnade❣️
