corrected typos and slide

--- a/deck.mdx
+++ b/deck.mdx
@@ -394,7 +394,7 @@ säkrare kod!
 
 <CodeSurfer
   title="🤙 ➞ 🌀 ➞ 📊"
-  code={require("!raw-loader!./assets/1StateUse.ts")}
+  code={require("!raw-loader!./assets/1StateUse2.ts")}
   dark={dark}
   lang="typescript"
   theme={codeTheme}
